# cursed-diff

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build-rust-binary.yml
cli/: Cargo.toml  package.json
cli/src/: file.rs  filestore.rs  main.rs
cli/static/: index.html
cli/static/assets/: index-CcVWmBe1.css  index-DN5zLgc-.js  vendor-CxtKjBZA.js
test/a/: README.md
test/a/public/: index.html
test/a/src/: App.jsx
test/a/src/components/: Button.jsx
test/a/src/pages/: About.jsx  Home.jsx
test/b/public/: index.html  styles.css
test/b/src/: App.jsx
test/b/src/components/: Button.jsx
test/b/src/pages/: About.jsx  Contact.jsx  Home.jsx
web_app/: package.json  vite.config.js
web_app/src/: App.jsx  constants.ts  main.jsx
web_app/src/components/diff-viewer/: DiffConnector.jsx  DiffHeader.jsx  DiffLine.jsx  DiffPane.jsx  DiffStats.jsx  DiffViewer.jsx  diffUtils.js  index.js  useDiffViewer.js  useDiffViewer.jsx
web_app/src/components/patched/: FileSelector.jsx  FileSummary.jsx  RecentComparisons.jsx  index.js
web_app/src/hooks/: index.js  useComparisonHistory.js
web_app/src/layout/: AppLayout.jsx  Sidebar.jsx  TopNavbar.jsx
web_app/src/pages/: DiffView.jsx  FileView.jsx  HistoryView.jsx
web_app/src/utils/: api.js
